# noisy-benchmarks

./: .gitmodules  .uncrustifyrc  CMakeLists.txt  Makefile  aggregate.awk  bench-buffer.py  bench-hash.py  bench-hashfct.py  bench.py
cmake/: AddBenchmark.cmake
src/: hashfunction.c  hashtable.c  main.c  ringbuffer.c
src/common/: probe.cpp  probe.hpp  ringbuffer.hpp
src/driver/: measure-alloc.cpp  measure-alloc.hpp  measure-allocator.cpp  measure-allocator.hpp  measure-call.cpp  measure-call.hpp  measure-hash.cpp  measure-hash.hpp  measure-hashtable.cpp  measure-hashtable.hpp  measure-trycatch.cpp  measure-trycatch.hpp
src/plot/: allocators.plot.in  hash-comparison.plot  ns-per-iteration.plot.in
src/test/: hash_table.c  hash_table.h  ringbuffer.c  ringbuffer.h
src/test/alloc/: empty.cpp  gslice.cpp  jemalloc.cpp  malloc.cpp  new.cpp  pool.cpp  tcmalloc.cpp
src/test/allocator/: empty.cpp  gslice.cpp  jemalloc.cpp  malloc.cpp  new.cpp  pool.cpp  tcmalloc.cpp
src/test/call/: empty.cpp
src/test/hash/: bplus.cpp  brute.cpp  empty.cpp  glib.cpp  sparse.cpp
src/test/hashtable/: bplus.cpp  brute.cpp  empty.cpp  glib.cpp  sparse.cpp
src/test/trycatch/: empty.cpp  exceptions.cpp  no-exceptions.cpp  throwing.cpp  trying.cpp
